Update sierra-core and sierra-graphql to latest; fix all tests